quickstart/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
  selector:
    app: myapp
